<resources>
    <string name="app_name">RepasoJueves</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido" />
    <string name="Apellido1">Apellido</string>
    <string name="Celular">Celular</string>
    <string name="Correo">Correo</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Boton">boton</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="informacionpaseador">InformacionPaseador</string>
    <string name="informacionpaseador2">InformacionPaseador</string>
    <string name="informaci_n_detallada_del_profesional">Información Detallada del Profesional</string>
    <string name="contactar">Contactar</string>
    <string name="email">Email</string>
    <string name="contacto_movil">Contacto Movil</string>
    <string name="regresar">Regresar</string>
    <string name="imagen2">imagen2</string>
    <string name="imagen">imagen</string>
    <string name="detallar">Detallar</string>
    <string name="correo_del_profesional">Correo del Profesional</string>
    <string name="contactar2">Contactar</string>
    <string name="contactar3">Contactar</string>
    <string name="image2">image2</string>
    <string name="image1">image1</string>
    <string name="informaci_n_general_profesionales">Información General Profesionales</string>
    <string name="detallar2">Detallar</string>
    <string name="image3">image1</string>
    <string name="detallar3">Detallar</string>
    <string name="contactar1">Contactar</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="registro">Registro</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="correo_recuperar_contrase_a">Correo recuperar contraseña</string>
    <string name="Confirmarclave">Confirmar Clave</string>
    <string name="Correo2">Correo</string>
    <string name="paseandog">PaseanDog</string>
    <string name="registrar2">Registrar</string>
    <string name="logo">logo</string>
    <string name="textview">texto</string>
    <string name="celular">CELULAR</string>
    <string name="correo">CORREO</string>
    <string name="logoapp">logo</string>
</resources>